<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.CreatePwActivity">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/accountEditor"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.5" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/nameEditor"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="47dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/pwEditor"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/accountEditor"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="0.5"/>
    <Button
            android:text="@string/save_label"
            android:layout_width="307dp"
            android:layout_height="0dp"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toBottomOf="@+id/descEditor" android:id="@+id/saveButton"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/nameEditor"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/id_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@+id/accountEditor" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toStartOf="@+id/accountEditor"
            android:layout_marginEnd="16dp" app:layout_constraintHorizontal_bias="0.5" android:id="@+id/textView2"/>
    <TextView
            android:text="@string/passwd_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/pwEditor"
            app:layout_constraintEnd_toStartOf="@+id/pwEditor"
            android:layout_marginEnd="16dp"/>
    <TextView
            android:text="@string/name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/nameEditor" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" app:layout_constraintBaseline_toBaselineOf="@+id/nameEditor"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="88dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/descEditor" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@+id/textView6" app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/pwEditor"/>
    <TextView
            android:text="@string/desc_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/descEditor" android:id="@+id/textView6"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/descEditor"
            android:layout_marginEnd="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>